kyverno/kyverno-policies/overlays/staging/mutate-cluster-namespace-istiolabel-patch.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-cluster-namespace-istiolabel
spec:
  rules:
  - name: add-istio-labels
    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            # Staging environment specific istio label
            istio-injection: "enabled-staging"
