kyverno/kyverno-policies/overlays/staging/mutate-ns-deployment-spotaffinity-patch.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-ns-deployment-spotaffinity
spec:
  rules:
  - name: add-spot-affinity
    mutate:
      patchStrategicMerge:
        spec:
          template:
            spec:
              # For staging, use stronger affinity rules with higher weight
              affinity:
                nodeAffinity:
                  preferredDuringSchedulingIgnoredDuringExecution:
                  - weight: 50  # Higher weight in staging
                    preference:
                      matchExpressions:
                      - key: node.kubernetes.io/instance-type
                        operator: In
                        values:
                        - "spot-staging"
